@@ -27,17 +27,19 @@ A. Paper about MathGL!!!
 	u. Test FlowP + 3d
 
 15. Check samples: colorbar + axis after rotate -100 45
-16. Add extra samples (data1, data2, text2, error2) ???
+16. Add extra samples (data1, data2, data3, data4, text2, error2) ???
 17. Add "Triangulation sample", "Local light sample"
 18. Update docs about Cones (styles 't', '4', '6', '8')
 19. Update docs about Cone (style '4', '6', '8')
 
 20. http://en.wikipedia.org/wiki/Autocorrelation#Efficient_computation
 
-21. Update docs HMDT return NULL if data cannot be created
-22. Update docs: command 'resize' should take 0 (i.e. initial one) for default sizes
+21. Update docs: HMDT return NULL if data cannot be created
+22. Update docs: command 'resize' take 0 for default sizes
 23. check if all "value" options are described (see hist, )
 24. Check centered curved text (see text2)
+
+25. Symbols '<', '^', '>' for centring in BoxPlot, Bars, Barh, Boxs, ...
 
 ============= UDAV =============
 
